--- a/catalog.html
+++ b/catalog.html
@@ -7,23 +7,53 @@
   <body>
     <header class="header">
       
-      <div class="logo">
-        <a href="index.html">
-          <img src="#" alt="Логотип">
-        </a>
+      <a href="index.html" class="logo">
+        <img src="#" alt="Логотип">
+      </a>
+      
+      <div class="menu_options">
+        <input type="search" name="search" value="Поиск по сайту">
+        <ul>
+          <li><a href="">Валентин Петухов</a></li>
+          <li><a href="">Сравнить</a></li>
+          <li><a href="">Корзина</a></li>
+        </ul>
       </div>
 
+      <nav class="menu_links">
+        <ul>
+          <li><a>Каталог товаров</a>
+            <ul>
+              <li>
+                <ul>
+                  <li><a href="">Виртуальная реальность</a></li>
+                  <li><a href="">Моноподы для селфи</a></li>
+                  <li><a href="">Экшн-камеры</a></li>
+                </ul>
+              </li>
+            </ul>
 
-      <input type="search" name="search" value="Поиск по сайту">
-      <button type="button">Валентин Петухов</button>
-      <button type="button">Сравнить</button>
-      <button type="button">Корзина</button>
+            <ul>
+              <li>
+                <ul>
+                  <li><a href="">Фитнес-браслеты</a></li>
+                  <li><a href="">Умные часы</a></li>
+                </ul>
+              </li>
+            </ul>
 
-      <nav class="menu_catalog">
-          <a>Каталог товаров</a>
-          <a href="">Доставка</a>
-          <a href="">Гарантия</a>
-          <a href="">Контакты</a>
+            <ul>
+              <li>
+                <ul>
+                  <li><a href="">Квадрокоптеры</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Гарантия</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
       </nav>      
  
     </header>
