--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
         </div>
         
         <div class="promo_controls">
-          <h1>Делай селфи, <br>   
-            как Бен Стиллер! 
-          </h1>
+          <p>Делай селфи, </p>   
+          <p>как Бен Стиллер!</p>
           <p>Самая длинная палка для селфи доступна в нашем магазине. <br>
           Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <div>
-            <button>Подробнее</button>  
+            <button class="yellow_buttons">Подробнее</button>  
             
             <label for="one">
               <input type="radio" name="slider" id="one" value="1" checked>
@@ -155,9 +154,9 @@
       <section class="delivery_menu">
 
         <ul class="delivery">
-          <li><button>Доставка</button></li>
-          <li><button>Гарантия</button></li>
-          <li><button>Кредит</button></li>
+          <li><button class="yellow_buttons">Доставка</button></li>
+          <li><button class="yellow_buttons">Гарантия</button></li>
+          <li><button class="yellow_buttons">Кредит</button></li>
         </ul>
 
         <div class="delivery_description">
@@ -200,14 +199,14 @@
             <li>ЖелДорЭкспедиция</li>
           </ul>
   
-          <a href="">Подробнее о нас</a>
+          <a href="" class="yellow_buttons">Подробнее о нас</a>
         </div>
 
         <div class="about_contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
   
-          <button>Напишите нам</button> 
+          <button class="yellow_buttons">Напишите нам</button> 
         </div>
 
       </section>
