--- a/catalog.html
+++ b/catalog.html
@@ -199,8 +199,8 @@
 
     
     <footer class="footer">
-        <a href="/">
-          <img src="img/device.svg" class="footer_logo" width="163" height="35" alt="Логотип">
+        <a href="/" class="footer_logo">
+          <img src="img/device.svg" width="163" height="35" alt="Логотип">
         </a>
     
       <div class="footer_content">
