--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </a>
 
       <div class="header_options">
-        <input type="search" name="search" value="Поиск по сайту">
+        <input type="search" name="search" placeholder="Поиск по сайту">
         <ul>
           <li><a href="">Войти</a></li>
           <li><a href="">Сравнить</a></li>
