--- a/catalog.html
+++ b/catalog.html
@@ -222,9 +222,9 @@
 
       <div class="social">
         <ul>
-          <li><a href=""><img src="img/fb.svg" width="32" height="32" alt="Facebook">Фейсбук</a></li>
-          <li><a href=""><img src="img/inst.svg" width="32" height="32" alt="Instagram">Инстаграм</a></li>
-          <li><a href=""><img src="img/tw.svg" width="32" height="32" alt="Twitter">Твиттер</a></li> 
+          <li><a href="">Фейсбук</a></li>
+          <li><a href="">Инстаграм</a></li>
+          <li><a href="">Твиттер</a></li> 
           <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="27" height="35"></a></li>
         </ul>
         
