--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="about_contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-  
+          <img src="img/map.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15"> <br>
           <button class="yellow_button">Напишите нам</button> 
         </div>
 
@@ -237,9 +237,9 @@
 
       <div class="social">
         <ul>
-          <li><a href=""><img src="img/fb.svg" width="32" height="32" alt="Facebook" class="aaa">Фейсбук</a></li>
-          <li><a href=""><img src="img/inst.svg" width="32" height="32" alt="Instagram">Инстаграм</a></li>
-          <li><a href=""><img src="img/tw.svg" width="32" height="32" alt="Twitter">Твиттер</a></li> 
+          <li><a href="">Фейсбук</a></li>
+          <li><a href="">Инстаграм</a></li>
+          <li><a href="">Твиттер</a></li> 
           <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="27" height="35"></a></li> 
         </ul>
       </div>
