--- a/catalog.html
+++ b/catalog.html
@@ -230,7 +230,7 @@
       <div class="footer_content">
         <ul>
           <li><a href="#">Валентин Петухов</a></li>
-          <li><button>Выйти</button></li>
+          <li><a href="#">Выйти</a></li>
           <li><a href="#">Сравнить</a></li>
           <li><a href="#">Корзина</a></li>
         </ul>
