--- a/index.html
+++ b/index.html
@@ -249,9 +249,21 @@
 
       <div class="social">
         <ul>
-          <li><a href="#" target="_blank" rel="noopener">Фейсбук</a></li>
-          <li><a href="#" target="_blank" rel="noopener">Инстаграм</a></li>
-          <li><a href="#" target="_blank" rel="noopener">Твиттер</a></li> 
+          <li>
+            <a href="#" target="_blank" rel="noopener">
+              <span class="visually_hidden">Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" rel="noopener">
+              <span class="visually_hidden">Instagram</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" rel="noopener">
+              <span class="visually_hidden">Twitter</span>
+            </a>
+          </li>
           <li><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank" rel="noopener"><img src="img/logo-htmlacademy.svg" width="27" height="35" alt="Переход на страницу интенсивного курса HTML academy"></a></li> 
         </ul>
       </div>
