--- a/catalog.html
+++ b/catalog.html
@@ -179,32 +179,32 @@
           <article class="product">
             <a href="">
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-              <h3>Любительская селфи-палка</h3>
-              <p>500 руб.</p>
+              <p class="product_name">Любительская селфи-палка</p>
+              <span class="product_price">500 руб.</span>
             </a>
            </article>
       
            <article class="product">
              <a href="">
                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-               <h3>Профессиональная селфи-палка </h3>
-               <p>1500 руб.</p>
+               <p class="product_name">Профессиональная селфи-палка </p>
+               <span class="product_price">1 500 руб.</span>
              </a>    
            </article>
    
            <article class="product">
              <a href="">
                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-               <h3>Непотопляемая селфи-палка</h3>
-               <p>2500 руб.</p>
+               <p class="product_name">Непотопляемая селфи-палка</p>
+               <span class="product_price">2 500 руб.</span>
              </a>
            </article>
    
            <article class="product">
              <a href="">
                <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-               <h3>Селфи-палка «Следуй за мной»</h3>
-               <p>4900 руб.</p>
+               <p class="product_name">Селфи-палка «Следуй за мной»</p>
+               <span class="product_price">4 900 руб.</span>
              </a> 
            </article>
         </div>
@@ -229,9 +229,9 @@
         </a>
     
       <div class="footer_content">
-        <ul class="nav_item">
+        <ul class="nav_item nav_footer">
           <li><a href="#">Валентин Петухов</a></li>
-          <li><a href="#">Выйти</a></li>
+          <li><a class="logout" href="#">Выйти</a></li>
           <li><a href="#">Сравнить</a></li>
           <li><a href="#">Корзина</a></li>
         </ul>
