--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         </a>
         
         <div class="footer_content">
-          <ul class="nav_item">
+          <ul class="nav_item nav_footer">
             <li><a href="#">Войти</a></li>
             <li><a href="#">Сравнить</a></li>
             <li><a href="#">Корзина</a></li>
