--- a/catalog.html
+++ b/catalog.html
@@ -238,10 +238,10 @@
       </div>
 
       <p>г. Москва, ул. Строителей, 15</p>
-      <ul class="menu_links font_extra footer_links">
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Гарантия</a></li>
-        <li><a href="#">Контакты</a></li>
+      <ul class="menu_links footer_links">
+        <li class="font_extra"><a href="#">Доставка</a></li>
+        <li class="font_extra"><a href="#">Гарантия</a></li>
+        <li class="font_extra"><a href="#">Контакты</a></li>
       </ul>
       <p>Тел.: +7 (495) 495-95-95</p>
 
