--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
         
         <div class="footer_content">
           <ul class="nav_list nav_footer">
-            <li><a href="#">Войти</a></li>
-            <li><a href="#">Сравнить</a></li>
-            <li><a href="#">Корзина</a></li>
+            <li class="font_extra"><a href="#">Войти</a></li>
+            <li class="font_extra"><a href="#">Сравнить</a></li>
+            <li class="font_extra"><a href="#">Корзина</a></li>
           </ul>
         </div>
   
         <p>г. Москва, ул. Строителей, 15</p>
-        <ul class="menu_links font_extra footer_links">
-          <li><a href="#">Доставка</a></li>
+        <ul class="menu_links footer_links">
+          <li ><a href="#">Доставка</a></li>
           <li><a href="#">Гарантия</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
