--- a/catalog.html
+++ b/catalog.html
@@ -184,27 +184,27 @@
             </a>
            </article>
       
-           <article class="product">
+           <article class="product font_extra">
              <a href="">
                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-               <p class="product_name font_extra">Профессиональная селфи-палка </p>
-               <span class="font_extra">1 500 руб.</span>
+               <p class="product_name">Профессиональная селфи-палка </p>
+               <span>1 500 руб.</span>
              </a>    
            </article>
    
-           <article class="product">
+           <article class="product font_extra">
              <a href="">
                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-               <p class="product_name font_extra">Непотопляемая селфи-палка</p>
-               <span class="font_extra">2 500 руб.</span>
+               <p class="product_name">Непотопляемая селфи-палка</p>
+               <span>2 500 руб.</span>
              </a>
            </article>
    
-           <article class="product">
+           <article class="product font_extra">
              <a href="">
                <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-               <p class="product_name font_extra">Селфи-палка «Следуй за мной»</p>
-               <span class="font_extra">4 900 руб.</span>
+               <p class="product_name">Селфи-палка «Следуй за мной»</p>
+               <span>4 900 руб.</span>
              </a> 
            </article>
         </div>
