--- a/catalog.html
+++ b/catalog.html
@@ -225,7 +225,7 @@
     
     <footer class="footer">
         <a class="footer_logo" href="/" >
-          <img src="img/device.svg" width="163" height="35" alt="Device">
+          <img src="img/footer_logo.png" width="163" height="35" alt="Device">
         </a>
     
       <div class="footer_content">
