--- a/catalog.html
+++ b/catalog.html
@@ -196,10 +196,10 @@
       
               <div class="product_range">
       
-                <article class="product ont_extra">
+                <article class="product font_extra">
                   <a href="">
                     <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                    <p class="product_name font_extra">Любительская селфи-палка</p>
+                    <p class="product_name">Любительская селфи-палка</p>
                     <span>500 руб.</span>
                   </a>
                  </article>
