отцентровка фильтра и сортировки

--- a/catalog.html
+++ b/catalog.html
@@ -160,7 +160,7 @@
   
             <section class="catalog_choose">
               <div class="sorting_menu">
-                <div>
+                <div class="block_sorting">
                   <h3 class="third_title font_extra">Сортировка:</h3>
                 </div>
                 
