--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
       <div class="container">
         <div class="header_block">
           <h1 class="visually_hidden">Магазин гаджетов "DEVICE"</h1>
-          <div class="header_logo">
-            <a>
-              <img src="img/device.svg" width="163" height="35" alt="Device">
-            </a>
-          </div>
+          <a class="header_logo">
+            <img src="img/device.svg" width="163" height="35" alt="Device">
+          </a>
 
           <div class="header_options">
             
