меню навигации. раскрывающийся список

--- a/catalog.html
+++ b/catalog.html
@@ -39,37 +39,23 @@
 
           <nav class="menu_links font_extra">
             <ul class="menu_catalog">
-              <li><a class="dropdown_catalog">Каталог товаров</a>
+              <li class="catalog_item font_extra"><a class="dropdown_catalog">Каталог товаров</a>
                 <ul class="dropdown_menu">
-                  <li>
-                    <ul>
-                      <li><a href="catalog/virtual.html">Виртуальная реальность</a></li>
-                      <li><a href="catalog/monopod.html">Моноподы для селфи</a></li>
-                      <li><a href="catalog/camera.html">Экшн-камеры</a></li>
-                    </ul>
-                  </li>
-                
-                  <li>
-                    <ul>
-                      <li><a href="catalog/fitness.html">Фитнес-браслеты</a></li>
-                      <li><a href="catalog/clock.html">Умные часы</a></li>
-                    </ul>
-                  </li>
-              
-                  <li>
-                    <ul>
-                      <li><a href="catalog/quadrocopter.html">Квадрокоптеры</a></li>
-                    </ul>
-                  </li>
+                  <li><a href="catalog/virtual.html">Виртуальная реальность</a></li>
+                  <li><a href="catalog/monopod.html">Моноподы для селфи</a></li>
+                  <li><a href="catalog/camera.html">Экшн-камеры</a></li>
+                  <li><a href="catalog/fitness.html">Фитнес-браслеты</a></li>
+                  <li><a href="catalog/clock.html">Умные часы</a></li>
+                  <li><a href="catalog/quadrocopter.html">Квадрокоптеры</a></li>
                 </ul>
               </li>
             </ul>
             <ul class="links_navigation">
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Гарантия</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li class="font_extra"><a href="#">Доставка</a></li>
+              <li class="font_extra"><a href="#">Гарантия</a></li>
+              <li class="font_extra"><a href="#">Контакты</a></li>
             </ul>
-          </nav>             
+          </nav>                         
         </div>
       </div>
     </header>
