js форма обратной связи

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               <h2 class="second_title font_extra">Контакты</h2>
               <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
               <img src="img/map.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15"> <br>
-              <button class="btn font_extra">Напишите нам</button> 
+              <button class="btn btn_feedback font_extra">Напишите нам</button> 
             </div>
 
           </div>       
@@ -402,30 +402,34 @@
       </div>     
     </footer>    
   
-    <div class="popup popup_writeus">
+    <section class="modal modal_feedback">
+      <h2 class="visually_hidden">Форма обратной связи</h2>
 
       <form class="write_us" method="post" action="https://echo.htmlacademy.ru/">
-        <div>
-          <label for="user_name">Ваше имя:</label>
+        <div class="popup_feedback feedback_name">
+          <label for="user_name font_extra">Ваше имя:</label>
           <input type="text" id="user_name" name="user_name" placeholder="Имя Фамилия" required>
         </div>
-
-        <div>
-          <label for="user_email">Ваш e-mail:</label>
+        <div class="popup_feedback feedback_email">
+          <label for="user_email font_extra">Ваш e-mail:</label>
           <input type="email" id="user_email" name="user_email" placeholder="email@examle.com" required>
         </div>
-      
-        <label for="user_message">Текст письма</label>
-        <textarea id="user_message" name="user_message" rows="10" placeholder="В свободной форме"></textarea>
-      
-        <button type="submit" class="btn font_extra">Отправить</button>  
+        <div class="popup_feedback feedback_text">
+          <label for="user_message font_extra">Текст письма</label>
+          <textarea id="user_message" name="user_message" rows="10" placeholder="В свободной форме" required></textarea>
+        </div>
+ 
       </form>
-    </div>
+      <button class="btn font_extra" type="submit">Отправить</button> 
+      <button class="modal_close" type="button"><span class="visually_hidden">Закрыть</span></button>
+    </section>
   
   
-    <div class="popup popup_map">
+    <section class="modal modal_map">
       <img src="img/map_big.png" width="960" height="559" alt="Карта офиса по адресу улица Строителей, 15">
-    </div>
-  
+      <button class="modal_close" type="button"><span class="visually_hidden">Закрыть</span></button>
+    </section>
+
+    <script src="js/map.js"></script>
   </body>
 </html>
