--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
               </svg>
               <h2 class="second_title font_extra">Контакты</h2>
               <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-              <img src="img/map.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15"> <br>
+              <a class="button_map" href="#">
+                <img src="img/map.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
+              </a>
               <button class="btn btn_feedback font_extra">Напишите нам</button> 
             </div>
 
@@ -406,30 +408,34 @@
       <h2 class="visually_hidden">Форма обратной связи</h2>
 
       <form class="write_us" method="post" action="https://echo.htmlacademy.ru/">
-        <div class="popup_feedback feedback_name">
-          <label for="user_name font_extra">Ваше имя:</label>
-          <input type="text" id="user_name" name="user_name" placeholder="Имя Фамилия" required>
+        <div class="feedback_block">
+          <div class="popup_feedback feedback_name">
+            <label for="user_name font_extra">Ваше имя:</label>
+            <input type="text" id="user_name" name="user_name" placeholder="Имя Фамилия">
+          </div>
+          <div class="popup_feedback feedback_email">
+            <label for="user_email font_extra">Ваш e-mail:</label>
+            <input type="email" id="user_email" name="user_email" placeholder="email@examle.com">
+          </div>
+          <div class="popup_feedback feedback_text">
+            <label for="user_message font_extra">Текст письма</label>
+            <textarea id="user_message" name="user_message" rows="10" placeholder="В свободной форме"></textarea>
+          </div>
         </div>
-        <div class="popup_feedback feedback_email">
-          <label for="user_email font_extra">Ваш e-mail:</label>
-          <input type="email" id="user_email" name="user_email" placeholder="email@examle.com" required>
-        </div>
-        <div class="popup_feedback feedback_text">
-          <label for="user_message font_extra">Текст письма</label>
-          <textarea id="user_message" name="user_message" rows="10" placeholder="В свободной форме" required></textarea>
-        </div>
- 
+        
+        <button class="btn font_extra" type="submit">Отправить</button> 
       </form>
-      <button class="btn font_extra" type="submit">Отправить</button> 
+    
       <button class="modal_close" type="button"><span class="visually_hidden">Закрыть</span></button>
     </section>
   
   
-    <section class="modal modal_map">
-      <img src="img/map_big.png" width="960" height="559" alt="Карта офиса по адресу улица Строителей, 15">
+    <section class="modal modal_map ">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6361.572655676862!2d37.52673662659867!3d55.68628279579961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2slv!4v1582573308087!5m2!1sru!2slv" width="960" height="559" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       <button class="modal_close" type="button"><span class="visually_hidden">Закрыть</span></button>
     </section>
 
+    <script src="js/feedback.js"></script>
     <script src="js/map.js"></script>
   </body>
 </html>
