--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="img_wrap">
               <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи">
             </div>
-            <div class="content" data_counter="01">
+            <div class="content">
               <p class="promo_slogan font_extra">Делай селфи, как Бен Стиллер!</p>
               <p>Самая длинная палка для селфи доступна в нашем магазине.
                 Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
@@ -104,7 +104,7 @@
             <div class="img_wrap">
               <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующие фитнес-браслеты">
             </div>
-            <div class="content" data_counter="02">
+            <div class="content">
               <p class="promo_slogan font_extra">Худеем правильно!</p>
               <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
               <a class="btn font_extra">Подробнее</a>
@@ -115,7 +115,7 @@
                   <dd>Без подзарядки</dd>
                 </div>
               </dl>
-              
+
             </div>
           </div>
 
@@ -123,7 +123,7 @@
             <div class="img_wrap">
               <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер оснащенный мощным лазером">
             </div>
-            <div class="content" data_counter="03">
+            <div class="content">
               <p class="promo_slogan font_extra">Порхает как бабочка, жалит как пчела!</p>
               <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
               <a class="btn font_extra">Подробнее</a>  
@@ -376,6 +376,7 @@
             </ul>
 
             <section class="copyright">
+              <h2 class="visually_hidden">Копирайт</h2>
               <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank" rel="noopener">
                 <img src="img/logo-html.png" width="27" height="35" alt="Переход на страницу интенсивного курса HTML academy">
               </a>
@@ -392,16 +393,16 @@
       <form class="write_us" method="post" action="https://echo.htmlacademy.ru/">
         <div class="feedback_block">
           <div class="popup_feedback feedback_name">
-            <label for="user_name font_extra">Ваше имя:</label>
-            <input type="text" id="user_name" name="user_name" placeholder="Имя Фамилия">
+            <label for="username" class="font_extra">Ваше имя:</label>
+            <input type="text" id="username" name="user_name" placeholder="Имя Фамилия">
           </div>
           <div class="popup_feedback feedback_email">
-            <label for="user_email font_extra">Ваш e-mail:</label>
-            <input type="email" id="user_email" name="user_email" placeholder="email@examle.com">
+            <label for="useremail" class="font_extra">Ваш e-mail:</label>
+            <input type="email" id="useremail" name="user_email" placeholder="email@examle.com">
           </div>
           <div class="popup_feedback feedback_text">
-            <label for="user_message font_extra">Текст письма</label>
-            <input id="user_message" name="user_message" rows="10" placeholder="В свободной форме"></input>
+            <label for="usermessage" class="font_extra">Текст письма</label>
+            <input id="usermessage" name="usermessage" placeholder="В свободной форме">
           </div>
         </div>
         
@@ -412,8 +413,9 @@
     </section>
   
   
-    <section class="modal modal_map ">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6361.572655676862!2d37.52673662659867!3d55.68628279579961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2slv!4v1582573308087!5m2!1sru!2slv" width="960" height="559" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    <section class="modal modal_map">
+      <h2 class="visually_hidden">Карта</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6361.572655676862!2d37.52673662659867!3d55.68628279579961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2slv!4v1582573308087!5m2!1sru!2slv" width="960" height="559" style="border:0;" allowfullscreen=""></iframe>
       <button class="modal_close" type="button"><span class="visually_hidden">Закрыть</span></button>
     </section>
 
