добавлен new, цвет для слайдера страниц

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <form class="menu_search" action="https://echo.htmlacademy.ru" method="get">
               <label for="search"><span class="visually_hidden">Поиск по сайту</span></label>
               <input class="search" type="search" id="search" name="search" placeholder="Поиск по сайту">
-              <input id="search-button" type="submit" class="search-button" value="Найти">
+              <input id="search_button" type="submit" class="search_button" value="Найти">
             </form>
             
             <ul class="nav_list">
@@ -208,7 +208,7 @@
 
                 <div id="tabs_2" class="tab_content warranty_content">
                   <h2 class="second_title font_extra">Гарантия</h2>
-                  <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.
+                  <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br>
                     Товар, не дом, конечно же.</p>
                 </div>
 
