--- a/catalog.html
+++ b/catalog.html
@@ -39,19 +39,19 @@
           <nav class="menu_links font_extra">
             <ul class="menu_catalog">
               <li class="catalog_item font_extra">
-                <a class="dropdown_catalog">Каталог товаров</a>
+                <a class="dropdown_catalog" href="">Каталог товаров</a>
                 <ul class="dropdown_menu">
                   <li>
-                    <a href="#">Виртуальная реальность</a>
-                    <a href="#">Моноподы для селфи</a>
-                    <a href="#">Экшн-камеры</a>
+                    <a href="#" class="catalog_menu_item">Виртуальная реальность</a>
+                    <a href="catalog.html" class="catalog_menu_item">Моноподы для селфи</a>
+                    <a href="#" class="catalog_menu_item">Экшн-камеры</a>
                   </li>
                   <li>
-                    <a href="#">Фитнес-браслеты</a>
-                    <a href="#">Умные часы</a>
+                    <a href="#" class="catalog_menu_item">Фитнес-браслеты</a>
+                    <a href="#" class="catalog_menu_item">Умные часы</a>
                   </li>
                   <li>
-                    <a href="#">Квадрокоптеры</a>
+                    <a href="#" class="catalog_menu_item">Квадрокоптеры</a>
                   </li>
                 </ul>
               </li>
@@ -254,13 +254,13 @@
           </section>
           
           <div class="pagination font_extra">
-            <a class="pagination_control prev">Назад</a>
+            <a class="pagination_control prev" href="#">Назад</a>
             <ul>
               <li><a class="pagination_page current">1</a></li>
               <li><a class="pagination_page" href="#">2</a></li>
               <li><a class="pagination_page" href="#">3</a></li>
             </ul> 
-            <a class="pagination_control next">Вперед</a>
+            <a class="pagination_control next" href="#">Вперед</a>
           </div>
     
           </section>
