--- a/index.html
+++ b/index.html
@@ -69,14 +69,17 @@
 
           <form class="slider_form" action="https://echo.htmlacademy.ru/" method="GET">
             <ul class="slideshow_controls">
+
               <li>
                 <input class="visually_hidden slider_input" type="radio" name="slider" id="first_slider" checked>
                 <label for="first_slider"></label>
               </li>
+
               <li>
-                <input class="visually_hidden slider_input" type="radio" name="slider" id="second_slider">
+                <input class="visually_hidden slider_input" type="radio" name="slider" id="first_slider">
                 <label for="second_slider"></label>
               </li>
+
               <li>
                 <input class="visually_hidden slider_input" type="radio" name="slider" id="third_slider">
                 <label for="third_slider"></label>
