--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </li>
 
               <li>
-                <input class="visually_hidden slider_input" type="radio" name="slider" id="first_slider">
+                <input class="visually_hidden slider_input" type="radio" name="slider" id="second_slider">
                 <label for="second_slider"></label>
               </li>
 
