--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
               <h2 class="visually_hidden">Меню сервисов</h2>
 
               <nav class="tabs_nav font_extra">
-                <button class="btn ckecked">Доставка</button>
+                <button class="btn btn_active">Доставка</button>
                 <button class="btn">Гарантия</button>
                 <button class="btn">Кредит</button>
               </nav>
       
               <div class="tabs_wrapper">
-                <div id="tabs_1" class="tab_content delivery_content">
+                <div id="tabs_1" class="tab_content delivery_content active">
                   <h2 class="second_title font_extra">Доставка</h2>
                   <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
                 </div>
